--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 
 .wrapper {
   width: 420px;
-  background: transparent;
+/*   background: transparent; */
   border: 2px solid rgba(255, 255, 255, .2);
 /*   backdrop-filter: blur(9px); */
   color: #fff;
